--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -23,6 +23,22 @@ $app-direction: ltr;
 // http://ionicframework.com/docs/theming/overriding-ionic-variables/
 
 
+.corazon-vacio {
+  position: relative;
+  top: 30%;
+  font-size: 20px;
+}
+
+.icon-5x {
+  font-size: 100px;
+}
+
+.corazon-numero {
+  position: absolute;
+  top: -5px;
+  left: 18px;
+  border-radius: 100%;
+}
 
 
 // Named Color Variables
