--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -40,6 +40,10 @@ $app-direction: ltr;
   border-radius: 100%;
 }
 
+// .toolbar-title-md {
+//   margin-left: -30px !important;
+// }
+
 
 // Named Color Variables
 // --------------------------------------------------
